# gmail_assistant

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BREAKING_CHANGES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: 0922-0238_project_governance.json  default.json.template  gmail_assistant_config.json  organizer_config.json
config/analysis/: 0922-1430_daily_analysis_config.json
config/app/: analysis.json  config.json
config/schema/: config.schema.json
docs/: 0108-1430_data_architecture_analysis_report.md  0108-1543_master_codebase_assessment.md  0108-1600_ai_summarizer_design.md  0108-1600_code_analysis_report.md  0108-1600_daily_analysis_implementation.md  0108-1600_email_classification_report.md  0108-1600_email_report_workflow.md  0108-1600_gmail_deletion_guide.md  0108-1600_readme_original.md  0108-1600_readme_v2.md  0109-0134_arch_review_backend.md  0109-0134_arch_review_project.md  0109-1400_TECHNICAL_REFERENCE_INDEX.md  0109-1430_arch_review_system.md  0109-1600_CONFIGURATION_REFERENCE.md  0109-1700_implementation_plan_v3.md  0109-1800_CONSTANTS_REFERENCE.md  0109-2001_TESTING_GUIDE.md  0109-2001_test_report.md  0109-2100_security_remediation_plan.md  0109-2145_remediation_plan.md  0109-2300_final_implementation_plan_consolidated.md  0109-2310_README_md_update_recommendations.md  0110-0300_remediation_action_plan.md  0922-1645_performance_optimization_summary.md  0922-1930_implementation_summary.md  1008-1844_executive_summary.md  README.md  REFERENCE_DOCUMENTATION_GUIDE.md  full_project_documentation.md
docs/adr/: ADR-0001-package-layout.md  ADR-0004-exception-taxonomy.md
docs/api/: README.md  public-api-reference.md
docs/architecture/: README.md  component-deep-dive.md  diagrams.md  overview.md
docs/archive/: README.md
docs/assessments/: 0109-1915_data_architecture_assessment.md  0109-2030_arch_review_consistency.md  0109-2230_security_audit_report.md  0109-2310_documentation_audit_report.md  0109-2330_comprehensive_architecture_review.md  0110-0215_master_comprehensive_assessment.md  0110-review_architecture_assessment.md  0110-review_code_quality_assessment.md  0110-review_master_comprehensive_assessment.md  0110-review_security_audit.md  1008-1844_comprehensive_codebase_assessment.md  README.md
docs/audit/: 20260109-0919_baseline.json
docs/planning/: README.md
docs/prompts/: 00_phase0_security_audit.md  01_phase1_critical_fixes.md  02_phase2_packaging_foundation.md  03_phase3_config_exceptions.md  04_phase4_cli_consolidation.md  05_phase5_test_organization.md  06_final_validation.md  README.md
docs/reference/: 0109-2300_TECHNICAL_REFERENCE_DELIVERY_SUMMARY.md  README.md  governance-quick-reference.md  implementation_plan_final_release.md
docs/testing/: 0109-testing_quick_guide.md  0109-testing_readme.md  0109-testing_status_roadmap.md  0110-1108_testing_implementation_plan.md  0110-1945_phase7_test_implementation.md  README.md  quick-reference.md
docs/user-guide/: README.md  cli-reference.md
examples/: __init__.py  example_usage.py  samples.py
scripts/: fresh_start.py  quick_analysis.py  verify_all.ps1
scripts/analysis/: daily_email_analysis.py  setup_analysis.py  test_system.py
scripts/audit/: baseline.ps1  baseline.sh
scripts/backup/: dedupe_in_place.ps1  dedupe_merge.ps1  move_backup_years.ps1
scripts/legacy/: README.md
scripts/maintenance/: complete_cleanup.sh
scripts/migration/: 002_normalize_schema.py  move_to_package.ps1  move_to_package_layout.ps1
scripts/operations/: clean_unread_inbox.py  direct_fetch.py  fetch_remaining.py  quick_test.ps1  refresh_and_fetch.py  run_comprehensive.bat  run_comprehensive.ps1
scripts/setup/: gmail_safety_validator.py  gmail_setup_integrated.py  quick_start.bat  quick_start.ps1  setup_and_test.bat  setup_gmail_deletion.py
scripts/utilities/: convert_excel_to_parquet.py  create_fixed_markdown.py  final_validation.py  fix_eml_files.py  organize_emails.py  validate_eml_conversion.py
scripts/validation/: check_import_policy.py  check_import_resolution.py  release_checks.ps1
src/: __init__.py  py.typed
src/analysis/: __init__.py  daily_email_analyzer.py  email_data_converter.py  setup.py
src/cli/: analyze.py  auth.py  config.py  delete.py  fetch.py
src/core/: __init__.py  config.py
src/deletion/: __init__.py  deleter.py  ui.py
src/gmail_assistant/: __init__.py  __main__.py
src/handlers/: analysis_handler.py  config_handler.py  delete_handler.py  fetcher_handler.py  tools_handler.py
src/parsers/: advanced_email_parser.py  gmail_eml_to_markdown_cleaner.py  robust_eml_converter.py
src/plugins/: __init__.py  base.py  registry.py
src/tools/: __init__.py  cleanup_markdown.py  markdown_post_fixer.py  markdown_post_fixer_stage2.py  regenerate_markdown_from_eml.py
src/utils/: __init__.py  audit_logger.py  cache_manager.py  circuit_breaker.py  error_handler.py  rate_limiter.py  ultimate_email_processor.py
tests/: conftest.py  coverage.ini  pytest.ini  run_comprehensive_tests.py  run_tests.bat  test_base64_content.py  test_classification_analysis.py  test_cleanup_markdown_functional.py  test_cli.py  test_cli_help.py  test_cli_main_orchestrator.py  test_comprehensive_runner.py  test_core_container.py  test_core_gmail_assistant.py  test_core_protocols.py  test_core_simple.py  test_deletion_functionality.py  test_email_analysis_integration.py  test_email_classification_comprehensive.py  test_email_processing_comprehensive.py  test_fix_specific_email.py  test_fixed_eml.py  test_gmail_api_integration.py  test_gmail_api_integration_comprehensive.py  test_improved_coverage.py  test_parsers_advanced_email.py  test_plugins.py  test_rich_progress.py
tests/analysis/: test_daily_analyzer.py
tests/docs/: 0111-0228_test_fixes_plan.md  0111-0248_test_fixes_progress_report.md  TESTING_STATUS_AND_ROADMAP.md  skip_remediation_report.md
tests/fixtures/: sample_emails.json
tests/integration/: __init__.py  conftest.py  test_cli_workflows.py  test_gmail_api.py  (+2 more)
(+220 files in other folders)
