[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "gmail-assistant"
version = "2.0.0"
description = "Gmail backup, analysis, and management suite"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Project Author", email = "author@example.com"}
]
keywords = ["gmail", "email", "backup", "google-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "html2text>=2024.2.26",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
]
ui = [
    "rich>=13.7.0",
    "tqdm>=4.66.0",
]
advanced-parsing = [
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.13.0",
    "lxml>=5.0.0",
    "python-frontmatter>=1.0.0",
]
content-extraction = [
    "readability-lxml>=0.8.1",
    "trafilatura>=1.9.0",
]
async = [
    "aiohttp>=3.9.5",
    "asyncio-throttle>=1.0.2",
    "psutil>=5.9.8",
]
security = [
    "keyring>=25.0.0",
    "regex>=2024.5.0",  # ReDoS protection with timeout (M-2 fix)
]
network = [
    "requests>=2.32.0",
    "urllib3>=2.2.0",
]
all = [
    "gmail-assistant[analysis,ui,advanced-parsing,content-extraction,async,security,network]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "build>=1.0.0",
]

[project.scripts]
gmail-assistant = "gmail_assistant.cli.main:main"

[project.urls]
Homepage = "https://github.com/user/gmail-assistant"
Documentation = "https://github.com/user/gmail-assistant#readme"
Repository = "https://github.com/user/gmail-assistant"
Changelog = "https://github.com/user/gmail-assistant/blob/main/CHANGELOG.md"

# Fixed: Correct hatchling src-layout configuration
[tool.hatch.build.targets.wheel]
packages = ["src/gmail_assistant"]

[tool.hatch.build.targets.sdist]
include = [
    "src/gmail_assistant/**/*.py",
    "src/gmail_assistant/py.typed",
    "README.md",
    "CHANGELOG.md",
]

# Ensure py.typed is included
[tool.hatch.build.targets.wheel.force-include]
"src/gmail_assistant/py.typed" = "gmail_assistant/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "tests/.pytest_cache"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--junitxml=tests/test_results/test-results.xml",
]
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (mocked external services)",
    "api: Tests requiring real Gmail API credentials",
    "slow: Tests taking >5 seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning:google.*:",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["src/gmail_assistant"]
branch = true
data_file = "tests/test_results/.coverage"
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    # Entry point (trivial)
    "src/gmail_assistant/__main__.py",
    # Complex conditional imports
    "src/gmail_assistant/core/__init__.py",
    # Modules requiring Gmail API (tested in integration)
    "src/gmail_assistant/core/fetch/*",
    "src/gmail_assistant/core/processing/*",
    "src/gmail_assistant/core/ai/*",
    "src/gmail_assistant/deletion/*",
    "src/gmail_assistant/analysis/*",
    "src/gmail_assistant/parsers/*",
    # CLI stub commands (v2.1.0 implementation)
    "src/gmail_assistant/cli/commands/analyze.py",
    "src/gmail_assistant/cli/commands/auth.py",
    "src/gmail_assistant/cli/commands/config_cmd.py",
    "src/gmail_assistant/cli/commands/delete.py",
    "src/gmail_assistant/cli/commands/fetch.py",
    "src/gmail_assistant/cli/commands/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
fail_under = 70

[tool.coverage.html]
directory = "tests/test_results/htmlcov"

[tool.coverage.json]
output = "tests/test_results/coverage.json"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gmail_assistant"]

# Fixed: Remove --ignore-missing-imports, add explicit per-module config
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["gmail_assistant"]

[[tool.mypy.overrides]]
module = [
    "google.*",
    "googleapiclient.*",
    "html2text",
    "tenacity",
]
ignore_missing_imports = true
